add basic videos

--- a/main.tex
+++ b/main.tex
@@ -37,7 +37,16 @@
 
 \begin{frame}{Why am I giving this talk?}
         \centering
-        
+        \begin{columns}
+            \column{0.3\textwidth}
+                \movie[height=0.3\textheight, loop, autostart=true] {\includegraphics[height=0.3\textheight]{video/semosys_mobipick.png}}{video/semosys_mobipick.mp4}
+
+            \column{0.3\textwidth}
+                \movie[height=0.3\textheight, poster, loop, autostart=true] {\includegraphics[height=0.3\textheight]{video/samler_robot.png}}{video/samler_robot.mp4}
+            \column{0.3\textwidth}
+                \movie[height=0.3\textheight, poster, loop, autostart=true] {\includegraphics[height=0.3\textheight]{video/coyote.png}}{video/coyote.mp4}
+        \end{columns}
+        \vspace{1.5em}
         I work with robots!\\
         \textit{(and I like to see more robots at Chaos \includegraphics[height=1em]{figures/hare_head_darkmode.pdf} events)}
 \end{frame}
@@ -116,4 +125,11 @@
 
   \end{frame}
 
+
+
+% Commercial Break
+\begin{frame}{Open Door Day 2025}{Visit me at work!}
+    5. September 2025 - \url{https://robotik.dfki-bremen.de}\\
+    DFKI Robotics Innovation Center, Robert-Hooke-Str. 1, 28359 Bremen
+\end{frame}
 \end{document}
