--- a/main.tex
+++ b/main.tex
@@ -32,6 +32,7 @@
     \includegraphics[width=.7\textwidth]{figures/logo_easterhegg.png}
     \vspace{1cm}
 
+    ROS for everyone!\\
     \textit{Andreas Bresser}
 \end{frame}
 
