do not add main.pdf - should be build by github actions

--- a/main.tex
+++ b/main.tex
@@ -54,6 +54,7 @@
 
 
 \begin{frame}{Robotics for AI enthusiasts}
+    Robotics is hard, why not let the AI generate code for it?
     \centering
     \begin{minipage}{0.6\textwidth}
         \begin{alertblock}{\includegraphics[height=1em]{figures/hare_head_darkmode.pdf} Warning!}
