remove 'plain' as the images are not blocking the page footer

--- a/main.tex
+++ b/main.tex
@@ -127,7 +127,7 @@
       \end{figure}
   \end{frame}
 
-\begin{frame}[plain]{Nodes}{Where should a node run?}
+\begin{frame}{Nodes}{Where should a node run?}
     % So your biggest problem is that you have all these different parts of a robot that need to exchange data with each other. This is exactly where ROS can help you. ROS 2 uses the "Data Distribution Service" or DDS for short. DDS manages the network communication between the ROS-nodes automatically.
     \textbf{ROS only on the robot (without Notebook)}
       \begin{figure}[tbh!]
@@ -136,7 +136,7 @@
       \end{figure}
   \end{frame}
   
-  \begin{frame}[plain]{Nodes}{Where should a node run?}
+  \begin{frame}{Nodes}{Where should a node run?}
     % So your biggest problem is that you have all these different parts of a robot that need to exchange data with each other. This is exactly where ROS can help you. ROS 2 uses the "Data Distribution Service" or DDS for short. DDS manages the network communication between the ROS-nodes automatically.
     \textbf{ROS without a robot!}
       \begin{figure}[tbh!]
