add quote by jensen as intro

--- a/main.tex
+++ b/main.tex
@@ -82,6 +82,25 @@
   \end{columns}
 \end{frame}
 
+\begin{frame}{ROS for Everyone}{ROS on \textit{everything}?}
+  \centering
+  \begin{minipage}{0.6\textwidth}
+  \begin{block}{}
+    “Everything that moves will be robotic”
+    \begin{flushright}\textit{- NVIDIA CEO Jensen Huang}\end{flushright}
+  \end{block}
+  \end{minipage}
+
+  \vspace{1em}
+
+  Let us keep the robot ecosystems free and open.
+
+  % Robotics might be the next hype, humanoid robots getting impressive,
+  % it is important to keep the free and open Robotics ecosystem free and open
+\end{frame}
+
+% ROS intro
+
 \begin{frame}{Topology}{Topology of a Robot}
     \begin{block}{The Robotics problem...}
       \begin{columns}
